@@ -1,3 +1,4 @@
+* CIF atom type normalization of oxidation state (issue #122)
 * improve documentation of PowerModel multiprocessing code (issue #121)
 * fix numpy-1.20 deprecation warnings
 * bugfix in kinematical diffraction model.
